# GSF

./: .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/commands/: format.md  lint.md  new-api-client.md  new-component.md  new-page.md  new-router.md
.github/workflows/: ci-client.yml  ci-python.yml
apps/web/: .prettierrc  next.config.ts  package.json  tsconfig.json
apps/web/api/: datasources.ts  requests.ts
client/: .eslintrc.json  .npmrc  README.md  next.config.ts  package-lock.json  package.json
client/api/: datasources.ts  requests.ts  types.ts
client/app/: globals.css  layout.tsx  page.tsx
client/common/: SinglePageComposer.tsx  utils.ts
client/components/: SinglePageView.tsx
client/enums/: datasources.ts
client/types/: breadcrumbs.ts  composer-section.ts  datasources.ts  params.ts
frontend/: .eslintrc.json  README.md  proxy.ts
frontend/api/: datasources.ts  requests.ts  types.ts
frontend/app/: globals.css
frontend/common/: SinglePageComposer.tsx  utils.ts
frontend/enums/: datasources.ts
frontend/types/: breadcrumbs.ts  composer-section.ts  datasources.ts
gsf/app/: main.py
gsf/infra/: Neo4jConnection.py  __init__.py
gsf/server/: env.py  main.py  neo4j_db.py
gsf/tests/: conftest.py  test_connectors_api.py  test_postgres_connector.py
python/: .env.example  package.json
python/app/: main.py  neo4j_db.py
python/scripts/: seed_neo4j.py
server/: pyproject.toml  ruff.toml
server/app/: main.py  mock_data.py  neo4j_db.py
(+51 files in other folders)
